2002-11-13 Ronald Oussoren <oussoren@cistron.nl>
	* Added workaround for 1 of the problems with NSTextView

2002-11-11  Bill Bumgarner  <bbum@codefab.com>
	* Fixed spelling error in NSComboxBoxDataSource definition.

2002-11-11 Ronald Oussoren <oussoren@cistron.nl>
 	* Lib/objc/__init__.py: Don't remove current directory from sys.path

2002-11-08 Ronald Oussoren <oussoren@cistron.nl>
	* Use integer for lots of userInfo arguments in the AppKit

2002-11-08  Bill Bumgarner  <bbum@codefab.com>
	* Cleaned up the Cocoa-Python project template.

2002-11-05  Bill Bumgarner  <bbum@codefab.com>
	* added an NSNumber test

2002-11-02  Bill Bumgarner  <bbum@codefab.com>
	* Change addressbook example to be in line with updated
	convenience methods.

2002-10-31 Ronald Oussoren <oussoren@cistron.nl>
	* Use 'nibwrapper' technique in all GUI examples.
	* Actually remove old version of classnib.py and add the
	  version in the new location (as used by Tools/mknibwrapper)

2002-10-31  Bill Bumgarner  <bbum@codefab.com>
	* Fixed a typo in NSOutlineViewDataSource.
	* Fixed the classnib.py script slightly.
	* Added support for NSSet in the convenience methods.

2002-10-30  Bill Bumgarner  <bbum@codefab.com>
	* Many, many changes to the convenience methods in the objc
	module.  Wrote a bunch of tests in test_nsarray and
	test_nsdictionary.

	* Fixed a bug in the NSDraggingDestination method declarations and
	made all of the methods optional (the developer only needs to
	implement a subset of the methods and none of the methods are
	required to be a part of that subset).
	* Fixed 'in' operation on arrays to use containsObject:.  Should
	work with sets.  Will not work with NSDictionary.
	* Fixed enum parser to handle enums that don't start with a
	typedef.  Regenerated appkit and foundation enumerated types files
	to pick up missing enums.
	* Added some tests and cleaned up a bit of the existing tests in
	test_subclass.py

2002-10-30  Ronald Oussoren <oussoren@cistron.nl>